# viscosity_acoustics

./: .gitignore  compare_batch.py  csv_to_wav.py  emit_acquire.py  main.py  mic_diff_1000Hz_20250618_113300.csv  mic_recorder.py  pyproject.toml  requirements.txt  speaker_test.py  spectral_analysis.ipynb  sr.py
mic_data/: mic_batch100_20250618_152130.csv  mic_batch10_20250618_152044.csv  mic_batch20_20250618_152056.csv  mic_batch40_20250618_152107.csv  mic_batch50_20250618_152118.csv  mic_diff_1000Hz_20250618_151907.csv  mic_diff_1000Hz_20250618_152627.csv  mic_diff_2000Hz_20250618_152950.csv  mic_diff_5000Hz_20250618_152807.csv  mic_diff_5000Hz_20250618_153059.csv
