[project]
name = "acoustic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-io>=2.8.0",
    "adafruit-mcp3008>=1.0.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyaudio>=0.2.14",
    "pyftdi>=0.56.0",
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    "scipy>=1.15.3",
    "typing-extensions>=4.14.0",
]
