[project]
name = "acoustic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-io>=2.8.0",
    "adafruit-mcp3008>=1.0.2",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pyaudio>=0.2.14",
    "pyftdi>=0.56.0",
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    "resampy>=0.4.3",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "typing-extensions>=4.14.0",
]
